--- a/pages/carta.html
+++ b/pages/carta.html
@@ -11,12 +11,6 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  rel="stylesheet"
-  integrity="sha384-XX36E+2Bjez+72Z5Vn7Kb2qcZC2SoIr5lHahD0kDzq2c65zby9q12tkM1etJXgdT"
-  crossorigin="anonymous"
-/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
@@ -139,7 +133,13 @@
               <div class="modal-footer">
                 <div class="carrito-container">
                   <p class="modal-total-text">Total de platos en el carrito: <span id="carrito-modal-count">0</span></p>
-                  <p class="total-carrito-modal" id="total-carrito">Total: 0.00 €</p>
+                  <p class="total-carrito-modal" id="total-carrito">Total a pagar: 0.00 €</p>
+                </div>
+                <div id="realizar-pedido-btn-container">
+                  <div id="exito-message" class="hidden ms-5 exito-message">¡Pedido realizado con éxito!</div>
+                  <button id="realizar-pedido" class="neon-button ms-5">Realizar Pedido</button>
+                </div>
+              </div>
                 </div>
               </div>
             </div>
