Implemento carta de bebidas con carrito, implemento seleccion de copa o botella para añadir al carrito, elimino vistas innecesarias e implemento la vista de cocteles

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -92,8 +92,7 @@
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="./pages/cervezas.html">Cervezas</a></li>
-                  <li><a class="dropdown-item" href="./pages/vinos.html">Vinos</a></li>
+                  <li><a class="dropdown-item" href="./pages/cervezas.html">Bebidas</a></li>
                   <li><a class="dropdown-item" href="#">Cocteles</a></li>
                 </ul>
               </li>
@@ -124,7 +123,7 @@
             <div class="modal-content">
               <div class="modal-header bg-dark text-white">
                 <h5 class="modal-title" id="carrito-modal-label">Platos para pedir</h5>
-                <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close text-white close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <ul class="list-group">
@@ -146,8 +145,9 @@
           </div>
         </div>
     </nav>
+    <div id="carta-page" class="menu-page">
     <div class="container">
-      <h1 class="text-center mt-0 ">CARTA</h1> 
+      <h1 class="text-center mt-0">CARTA</h1> 
       <div class="row">
         <div class="col-md-6">
           <div class="card">
@@ -581,6 +581,7 @@
         </ul>
       </div>
     </div>
+  </div>
   </div>
       <nav
         class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom">
