--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -112,7 +112,7 @@
       </div>
     </nav>
     <div class="container-fluid text-center mt-5">
-      <h3 class="text-center text-decoration-underline">NUESTROS VINOS</h3>
+      <h3 class="text-center text-decoration-underline">NUESTRAS COCTELES</h3>
       <div class="row mb-5">
         <div class="col-md-12 mt-5">
           <div class="row">
@@ -195,6 +195,28 @@
               <h5><b>Nombre del Producto 1</b></h5>
               <p>Descripción breve del producto.</p>
               <p class="price">$9.99</p>
+            </div>
+            <div class="postres d-flex justify-content-center">
+              <div class="col-md-3 mt-5">
+                <img
+                  src="imagen1.jpg"
+                  alt="Producto 1"
+                  class="img-fluid rounded-3"
+                />
+                <h5><b>Nombre del Producto 1</b></h5>
+                <p>Descripción breve del producto.</p>
+                <p class="price">$9.99</p>
+              </div>
+              <div class="col-md-3 mt-5">
+                <img
+                  src="imagen1.jpg"
+                  alt="Producto 1"
+                  class="img-fluid rounded-3"
+                />
+                <h5><b>Nombre del Producto 1</b></h5>
+                <p>Descripción breve del producto.</p>
+                <p class="price">$9.99</p>
+              </div>
             </div>
           </div>
         </div>
