Actualizo enlaces navbar de todas las vistas

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/index.html"
+                  href="./index.html"
                   >Home</a
                 >
               </li>
@@ -88,14 +88,10 @@
                     <a class="dropdown-item" href="./pages/carta.html">Nuestros platos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pages/postres.html">Postres</a>
-                  </li>
-                  <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="./pages/cervezas.html">Cervezas</a></li>
-                  <li><a class="dropdown-item" href="./pages/vinos.html">Vinos</a></li>
-                  <li><a class="dropdown-item" href="#">Cocteles</a></li>
+                  <li><a class="dropdown-item" href="./pages/bebidas.html">Bebidas</a></li>
+                  <li><a class="dropdown-item" href="./pages/cocteles.html">Cocteles</a></li>
                 </ul>
               </li>
               <li class="nav-item">
