--- a/pages/compromiso.html
+++ b/pages/compromiso.html
@@ -34,7 +34,7 @@
           aria-controls="offcanvasDarkNavbar"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="">Menú</span>
         </button>
         <div
           class="offcanvas offcanvas-end text-bg-dark"
@@ -68,7 +68,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/quienessomos.html"
+                <a class="nav-link" href="../pages/quienessomos.html"
                   >Conocenos un poco mejor</a
                 >
               </li>
@@ -83,18 +83,18 @@
                   Carta
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="./carta.html">Nuestros platos</a></li>
-                  <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
+                  <li>
+                    <a class="dropdown-item" href="./carta.html">Nuestros platos</a>
+                  </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="./cervezas.html">Cervezas</a></li>
-                  <li><a class="dropdown-item" href="./vinos.html">Vinos</a></li>
-                  <li><a class="dropdown-item" href="#">Cocteles</a></li>
+                  <li><a class="dropdown-item" href="./bebidas.html">Bebidas</a></li>
+                  <li><a class="dropdown-item" href="./cocteles.html">Cocteles</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./reservas.html"
+                <a class="nav-link" href="../pages/reservas.html"
                   >Reserva tu mesa</a
                 >
               </li>
