--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -84,16 +84,13 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li>
-                    <a class="dropdown-item" href="./pages/carta.html">Nuestros platos</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="./pages/postres.html">Postres</a>
+                    <a class="dropdown-item" href="./carta.html">Nuestros platos</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="./pages/cervezas.html">Bebidas</a></li>
-                  <li><a class="dropdown-item" href="#">Cocteles</a></li>
+                  <li><a class="dropdown-item" href="./bebidas.html">Bebidas</a></li>
+                  <li><a class="dropdown-item" href="./cocteles.html">Cocteles</a></li>
                 </ul>
               </li>
               <li class="nav-item">
