--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
-
   <body class="pagina1 center body-bg">
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
@@ -111,7 +110,7 @@
             ></a
           >
           <button
-            class="navbar-toggler"
+            class="navbar-toggler botonMolesto"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
