--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -277,11 +277,11 @@
       </div>
     </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card">
         <div class="card-body">
         <h2 class="card-title">Vinos</h2>
-        <ul class="list-group">
+        <ul class="list-group list-vinos">
             <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="dish-name">Vino Rosado</span>
             <span class="dish-price copa">copa 3.00 €</span>
