--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -154,11 +154,9 @@
         </form>
       </div>
     </div>
-    <nav
-      class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom"
-    >
+    <nav class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom">
       <div class="container">
-        <div class="navbar-collapse justify-content-center" id="navbarNav">
+        <div class="navbar-collapse footer justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"
