Implemento funcion para reproducir audio cuando inicia la pagina, tambien implemento imagenes play y pause para poder reproducir/pausar

--- a/index.html
+++ b/index.html
@@ -159,5 +159,11 @@
         </div>
       </div>
     </nav>
-  </body>
+    <audio id="audio" autoplay>
+      <source src="./music/edamame.mp3" type="audio/mpeg">
+      Tu navegador no admite el elemento de audio.
+    </audio>
+      <img class="pausePlay" id="playPauseButton" src="./img/pause.png" alt="Reproducir">
+      <script src="./audio.js"></script>
+      </body>
 </html>
