Actualizo estilos para que el cambio de texto cocincida con el efecto de parpadeo, tambien le añado sombreado al texto

--- a/index.html
+++ b/index.html
@@ -164,5 +164,6 @@
       <img class="pausePlay" id="playPauseButton" src="./img/pause.png" alt="Reproducir">
       <script src="./audio.js"></script>
       <script src="./textoInicio.js"></script>
+      <script src="./efectoParpadeo.js"></script>
       </body>
 </html>
