Implemento funcion para mostrar el boton despues de los textos de inicio y actualizo estilos del boton

--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
       <div class="logo-container">
         <img id="parpadeoImg" src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Imagen">
         <p id="parpadeoTexto" class="text-mask">Cocina de Mercado</p>
-    </div>
+        <div class="boton-container mostrar">
+          <a href="./pages/carta.html" style="text-decoration: none;">
+            <button id="botonCarta" class="btn neon-boton" style="display: none; opacity: 0;">A comer!</button>
+          </a>
+        </div>
+      </div>        
     <nav class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom">
       <div class="container">
         <div class="navbar-collapse justify-content-center" id="navbarNav">
