Actualizo estilos de las imagenes con estilos bootstrap y añado imagenes a la vista cocteles, implemento enlace con imagen para las vistas de bebidas y carta

--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="pagina2 d-flex flex-column justify-content-center">
+  <body class="paginaBebidas d-flex flex-column justify-content-center">
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="/index.html">
@@ -142,12 +142,11 @@
           </div>
         </div>
     </nav>
-    <div id="carta-page" class="menu-page">
-        <div class="container">
-          <h1 class="text-center mt-1">BEBIDAS</h1>
+    <div id="carta-page" class="menu-page mb-5">
+      <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <div class="card">
+              <div class="card mb-5">
                 <div class="card-body">
                   <h2 class="card-title">Agua</h2>
                   <ul class="list-group">
@@ -684,7 +683,7 @@
           </li>
             </ul>
             </div>
-             </div>
+            </div>
             </div>
           </div>
         </div>
@@ -711,6 +710,12 @@
           </div>
         </div>
       </nav>
+      <div class="text-center mt-3">
+        <a href="./carta.html">
+            <img src="../img/carta.png" alt="Volver a Carta" class="volverCarta">
+        </a>
+        <h4 class="textoBebidas mb-5">Ver la Carta</h4>
+    </div>
     </div>
     <script src="../carrito.js"></script>
   </body>
