--- a/pages/carta.html
+++ b/pages/carta.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="pagina2 d-flex flex-column justify-content-center">
+  <body class="paginaCarta d-flex flex-column justify-content-center">
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="/index.html">
@@ -143,8 +143,7 @@
         </div>
     </nav>
     <div id="carta-page" class="menu-page">
-    <div class="container">
-      <h1 class="text-center mt-0">CARTA</h1> 
+      <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="card">
@@ -602,7 +601,13 @@
           </div>
         </div>
       </nav>
+      <div class="text-center mt-3 mb-4">
+        <a href="./bebidas.html">
+            <img src="../img/cartaBebidas.png" alt="Volver a Bebidas" class="volverBebidas">
+        </a>
+        <h4 class="textoCarta">volver a la carta de bebidas</h4>
     </div>
+    </div>   
     <script src="../carrito.js"></script>
   </body>
 </html>
