--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -84,13 +84,19 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li>
-                    <a class="dropdown-item" href="./carta.html">Nuestros platos</a>
+                    <a class="dropdown-item" href="./carta.html"
+                      >Nuestros platos</a
+                    >
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="./bebidas.html">Bebidas</a></li>
-                  <li><a class="dropdown-item" href="./cocteles.html">Cocteles</a></li>
+                  <li>
+                    <a class="dropdown-item" href="./bebidas.html">Bebidas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./cocteles.html">Cocteles</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -104,111 +110,140 @@
       </div>
     </nav>
     <div class="container-fluid text-center mt-5">
-      <h3 class="text-center text-decoration-underline">NUESTRAS COCTELES</h3>
+      <h3 class="text-center">NUESTROS COCTELES</h3>
       <div class="row mb-5">
         <div class="col-md-12 mt-5">
-          <div class="row">
+          <div class="row text-white cartaCoctel">
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/1.jpeg"
+                alt="Margarita Fresca"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
+              <h5><b>Margarita Fresca</b></h5>
+              <p>
+                Una deliciosa margarita con tequila, licor de naranja y jugo de
+                lima fresca. Servida en un vaso escarchado con sal.
+              </p>
               <p class="price">$9.99</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/2.jpeg"
+                alt="Piña Colada Tropical"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Piña Colada Tropical</b></h5>
+              <p>
+                Una mezcla cremosa de ron, crema de coco y jugo de piña, servida
+                con hielo triturado y una rodaja de piña.
+              </p>
+              <p class="price">$8.99</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/3.jpeg"
+                alt="Mojito Refrescante"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Mojito Refrescante</b></h5>
+              <p>
+                Un cóctel refrescante con ron blanco, menta fresca, azúcar y
+                jugo de lima, coronado con soda y hielo.
+              </p>
+              <p class="price">$10.49</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/4.jpeg"
+                alt="Mai Tai"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Mai Tai</b></h5>
+              <p>
+                Un cóctel tropical con ron, licor de almendras, licor de naranja
+                y jugo de lima, decorado con una cereza y una rodaja de piña.
+              </p>
+              <p class="price">$11.99</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/5.jpeg"
+                alt="Mint Julep"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Mint Julep</b></h5>
+              <p>
+                Un cóctel refrescante de bourbon, azúcar y hojas de menta,
+                servido con hielo picado en una taza de plata.
+              </p>
+              <p class="price">$11.99</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/6.jpeg"
+                alt="Cuba Libre"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Cuba Libre</b></h5>
+              <p>
+                Una combinación clásica de ron, cola y jugo de limón, servida
+                con una rodaja de limón y hielo.
+              </p>
+              <p class="price">$7.99</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/7.jpeg"
+                alt="Sex on the Beach"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Sex on the Beach</b></h5>
+              <p>
+                Un cóctel tropical con vodka, licor de melocotón, jugo de
+                naranja y jugo de arándano, servido con una cereza y una rodaja
+                de naranja.
+              </p>
+              <p class="price">$10.99</p>
             </div>
             <div class="col-md-3 mt-5">
               <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
+                src="../img/8.jpeg"
+                alt="Caipirinha"
+                class="coctel img-fluid rounded-3"
               />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+              <h5><b>Caipirinha</b></h5>
+              <p>
+                Un cóctel brasileño con cachaça, azúcar y lima, servido con
+                hielo picado.
+              </p>
+              <p class="price">$8.49</p>
             </div>
-            <div class="postres d-flex justify-content-center">
-              <div class="col-md-3 mt-5">
-                <img
-                  src="imagen1.jpg"
-                  alt="Producto 1"
-                  class="img-fluid rounded-3"
-                />
-                <h5><b>Nombre del Producto 1</b></h5>
-                <p>Descripción breve del producto.</p>
-                <p class="price">$9.99</p>
-              </div>
-              <div class="col-md-3 mt-5">
-                <img
-                  src="imagen1.jpg"
-                  alt="Producto 1"
-                  class="img-fluid rounded-3"
-                />
-                <h5><b>Nombre del Producto 1</b></h5>
-                <p>Descripción breve del producto.</p>
-                <p class="price">$9.99</p>
-              </div>
+            <div class="col-md-6 mt-4">
+              <img
+                src="../img/9.jpg"
+                alt="Blue Lagoon"
+                class="coctel img-fluid rounded-3"
+              />
+              <h5><b>Blue Lagoon</b></h5>
+              <p>
+                Un cóctel azul brillante con vodka, licor de curaçao y limonada,
+                servido con una rodaja de limón.
+              </p>
+              <p class="price">$9.49</p>
+            </div>
+            <div class="col-md-6 mt-5">
+              <img
+                src="../img/10.jpg"
+                alt="Daiquiri de Fresa"
+                class="coctel img-fluid rounded-3"
+              />
+              <h5><b>Daiquiri de Fresa</b></h5>
+              <p>
+                Un clásico daiquiri con ron, puré de fresa, azúcar y jugo de
+                limón. Perfecto para los amantes de las fresas.
+              </p>
+              <p class="price">$9.99</p>
             </div>
           </div>
         </div>
