Implemento funcion de carga para la pagina de cocteles y un spinner con css

--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -471,6 +471,10 @@
         </div>
       </nav>
     </div>
+    <div id="loader" class="loader">
+      <div class="spinner"></div>
+  </div>
     <script src="../carrito.js"></script>
+    <script src="../loader.js"></script>
   </body>
 </html>
