Implemento dos enlaces para mejorar la experiencia de usuario  en la pagina de inicio, con estilos para efecto de caida y tambien implemento una funcion para que se muestre despues de los demas efectos

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -34,7 +34,7 @@
           aria-controls="offcanvasDarkNavbar"
           aria-label="Toggle navigation"
         >
-          <span class="">Menú</span>
+          <span class="menu">Menú</span>
         </button>
         <div
           class="offcanvas offcanvas-end text-bg-dark"
