--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Nombre+de+la+fuente" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body class="pagina1 center body-bg">
@@ -140,9 +141,7 @@
         <img id="parpadeoImg" src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Imagen">
         <p id="parpadeoTexto" class="text-mask">Cocina de Mercado</p>
         <div class="boton-container mostrar">
-          <a href="./pages/carta.html" style="text-decoration: none;">
-            <button id="botonCarta" class="btn neon-boton" style="display: none; opacity: 0;">A comer!</button>
-          </a>
+            <a id="botonCarta" class="neon-boton" style="display: none; opacity: 0;">Elige que te apetece</a>
         </div>
       </div>        
     <nav class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom">
@@ -167,6 +166,16 @@
       Tu navegador no admite el elemento de audio.
     </audio>
       <img class="pausePlay" id="playPauseButton" src="./img/pause.png" alt="Reproducir">
+      <a href="./pages/carta.html" style="text-decoration: none;">
+        <span id="botonCaida" class="botonCarta" style="display: none; opacity: 0;">
+          <p>Tengo hambre!</p>
+        </span>
+      </a>
+      <a href="./pages/cocteles.html" style="text-decoration: none;">
+        <span id="botonCocteles" class="botonCocteles" style="display: none; opacity: 0;">
+          <p>Me apetece un buen copón!</p>
+        </span>
+      </a>
       <script src="./audio.js"></script>
       <script src="./textoInicio.js"></script>
       <script src="./efectoParpadeo.js"></script>
